--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Quicksand:wght@300..700&family=Titillium+Web:wght@200;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Quicksand:wght@300..700&family=Titillium+Web:wght@200;400&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 body {
   font-family: "Inter", sans-serif;
+}
+
+header {
+  z-index: 10001 !important;
+}
+
+.section-container {
+  @apply max-w-screen-2xl container mx-auto xl:px-24 px-4;
+}
+
+.subtitle {
+  @apply text-red uppercase tracking-wide font-medium text-lg;
+}
+
+.title {
+  @apply text-4xl md:text-5xl font-bold my-2 md:leading-snug leading-snug;
+}
+
+.heartStar {
+  border-radius: 0px 28px 0px 28px;
+}
+
+.active {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  color: #39db4a;
 }
